# qpilot

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/wukong72/: available_qubits.json  chip_config_2026-03-08.json  cloud_chip_config_2026-03-08.json  noise_profile_2026-03-08.json  qpu_report_2026-03-08.md  qubit_report_2026-03-08.md  topology.json
data/wukong72/qpu_results/: all_results_2026-03-08.json  bell_best_1_2026-03-08.json  bell_best_2_2026-03-08.json  bell_worst_1_2026-03-08.json  bell_worst_2_2026-03-08.json  rb_q50_d10_2026-03-08.json  rb_q50_d1_2026-03-08.json  rb_q50_d50_2026-03-08.json  rb_q56_d10_2026-03-08.json  rb_q56_d1_2026-03-08.json  rb_q56_d50_2026-03-08.json  readout_prep0_q50_2026-03-08.json  readout_prep0_q51_2026-03-08.json  readout_prep0_q56_2026-03-08.json  readout_prep0_q62_2026-03-08.json  readout_prep1_q50_2026-03-08.json  readout_prep1_q51_2026-03-08.json  readout_prep1_q56_2026-03-08.json  readout_prep1_q62_2026-03-08.json  zne_bell_x1_2026-03-08.json  zne_bell_x3_2026-03-08.json  zne_bell_x5_2026-03-08.json
examples/: 01_connect_monitor.py  02_noise_profile.py  03_qubit_selection.py  04_readout_mitigation.py  05_zne.py  06_automated_experiment.py  07_wukong72_demo.py
scripts/: fetch_wukong_data.py  run_wukong_qpu.py
src/qpilot/: __init__.py  client.py  enums.py  exceptions.py
src/qpilot/characterization/: __init__.py  benchmarks.py  drift_detector.py  (+1 more)
tests/: conftest.py  test_characterization.py  test_harness.py  test_mitigation.py  test_models.py  test_monitor.py  test_optimization.py  test_transport.py
(+25 files in other folders)
